package Model;

/**
 * 枚举类
 * 收费项目等级
 *
 * @author 海蔚
 * @version 1
 */
public enum ChargeItemLevel {
    //甲类
    ClassA,
    //乙类
    ClassB,
    //丙类
    ClassC
}