package Model;

/**
 * 枚举类
 * 医院等级
 *
 * @author wanghaiwei
 * @version 1.0
 */
public enum HospitalLevel {
    //一类
    OneClass,
    //二类
    SecondClass,
    //三类
    ThirdClass,
    //社区
    Community
}