package Model;

/**
 * 性别枚举类
 *
 * @author 海蔚
 * @version 0.1
 */
public enum sex {
    male,
    female
}
